--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:padding="8dp">
+                android:padding="0dp">
 
                 <ImageView
                     android:id="@+id/EventImage"
@@ -39,6 +40,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:paddingTop="12dp"
                         android:text="@string/what"
                         android:textColor="@android:color/black" />
 
@@ -46,13 +48,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="@string/who"
-                        android:textColor="@android:color/black" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:paddingTop="12dp"
                         android:text="@string/where"
                         android:textColor="@android:color/black" />
 
@@ -60,44 +56,45 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:paddingTop="12dp"
                         android:text="@string/when"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="4dp">
-
-                    <EditText
-                        android:id="@+id/event_what"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:textColor="@android:color/black" />
 
                     <EditText
                         android:id="@+id/event_who"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black" />
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
 
                     <EditText
                         android:id="@+id/event_where"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black" />
+                        android:inputType="textPersonName"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
 
                     <EditText
                         android:id="@+id/event_when"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black" />
+                        android:editable="false"
+                        android:inputType="none"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -119,6 +116,15 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"></LinearLayout>
 
+            <Button
+                android:id="@+id/create_party_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:text="Party erstellen" />
+
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
