--- a/app/src/main/res/layout/event_fragment_guestlist.xml
+++ b/app/src/main/res/layout/event_fragment_guestlist.xml
@@ -57,7 +57,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
-                        android:text="@string/emptyList" />
+                        android:text="@string/emptyList"
+                        android:textStyle="italic" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -71,7 +72,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
-                        android:text="@string/emptyList" />
+                        android:text="@string/emptyList"
+                        android:textStyle="italic" />
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
